fix bad SVG height in Webkit on iOS 7, per #122

--- a/css/public_analytics.css
+++ b/css/public_analytics.css
@@ -344,7 +344,8 @@ section {
   display: block;
   margin: 0;
   width: 100%;
-  height: auto; }
+  height: auto;
+  max-height: 300px; }
 
 #current_visitors {
   font-weight: 600;
